--- a/PodoDemo/Views/Shared/Layout.cshtml
+++ b/PodoDemo/Views/Shared/Layout.cshtml
@@ -10,7 +10,7 @@
     <link href="~/css/Layout.css" rel="stylesheet" />
     <script src="~/js/jqwidgets/jqx-all.js"></script>
     <link href="~/js/jqwidgets/styles/jqx.base.css" rel="stylesheet" />
-
+    <script src="~/js/Common.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
             SetRenderViewHeight();
