--- a/PodoDemo/Views/Accounts/Create.cshtml
+++ b/PodoDemo/Views/Accounts/Create.cshtml
@@ -1,4 +1,4 @@
-@*@model PodoDemo.Models.Account*@
+ï»¿@*@model PodoDemo.Models.Account*@
 @model string
 
 @{
@@ -9,24 +9,24 @@
 
 <script type="text/javascript">
     $(document).ready(function () {
-        SetBasicElement();// ±âº»ÀûÀ¸·Î ±×¸®´Â È­¸é ³»¿ë
+        SetBasicElement();// ê¸°ë³¸ì ìœ¼ë¡œ ê·¸ë¦¬ëŠ” í™”ë©´ ë‚´ìš©
     });
 
-    // ±âº»ÀûÀ¸·Î ±×¸®´Â È­¸é ³»¿ë
+    // ê¸°ë³¸ì ìœ¼ë¡œ ê·¸ë¦¬ëŠ” í™”ë©´ ë‚´ìš©
     function SetBasicElement() {
         $("#jqdatetimeinput_founddate").jqxDateTimeInput({ width: '80%', formatString: 'yyyy-MM-dd' });
     }
 
-    // ÆûÀÌ ÀÔ·ÂµÉ ¶§
+    // í¼ì´ ì…ë ¥ë  ë•Œ
     function SubmitForm() {
-        // À¯È¿¼º °Ë»ç ÈÄ ÁøÇà
+        // ìœ íš¨ì„± ê²€ì‚¬ í›„ ì§„í–‰
         if (ValidateForm()) {
             $("#Founddate").val($('#jqdatetimeinput_founddate').jqxDateTimeInput('getText'));
             $("#AccountCreateForm").submit();
         }
     }
 
-    // ÀÔ·ÂÇÑ °ªµé¿¡ ´ëÇÑ À¯È¿¼º °Ë»ç
+    // ì…ë ¥í•œ ê°’ë“¤ì— ëŒ€í•œ ìœ íš¨ì„± ê²€ì‚¬
     function ValidateForm() {
         var nameValue = $("#Name").val();
         var phoneValue = $("#Phone").val();
@@ -38,34 +38,34 @@
         var detailValue = $("#Detail").val();
 
         if (nameValue == "") {
-            alert("°Å·¡Ã³ ÀÌ¸§À» ÀÔ·ÂÇØÁÖ¼¼¿ä.");
+            alert("ê±°ë˜ì²˜ ì´ë¦„ì„ ì…ë ¥í•´ì£¼ì„¸ìš”.");
             return false;
         }
 
         if (phoneValue != "") {
             if (!IsPhoneType(phoneValue)) {
-                alert("ÀüÈ­¹øÈ£ Çü½ÄÀ» 00-000-0000 Çü½ÄÀ¸·Î\n¿Ã¹Ù¸£°Ô ÀÔ·ÂÇØÁÖ¼¼¿ä.");
+                alert("ì „í™”ë²ˆí˜¸ í˜•ì‹ì„ 00-000-0000 í˜•ì‹ìœ¼ë¡œ\nì˜¬ë°”ë¥´ê²Œ ì…ë ¥í•´ì£¼ì„¸ìš”.");
                 return false;
             }
         }
 
         if (faxValue != "") {
             if (!IsPhoneType(faxValue)) {
-                alert("ÆÑ½º Çü½ÄÀ» 00-000-0000 Çü½ÄÀ¸·Î\n¿Ã¹Ù¸£°Ô ÀÔ·ÂÇØÁÖ¼¼¿ä.");
+                alert("íŒ©ìŠ¤ í˜•ì‹ì„ 00-000-0000 í˜•ì‹ìœ¼ë¡œ\nì˜¬ë°”ë¥´ê²Œ ì…ë ¥í•´ì£¼ì„¸ìš”.");
                 return false;
             }
         }
 
         if (biznumValue != "") {
             if (!IsBizNumType(biznumValue)) {
-                alert("»ç¾÷ÀÚ¹øÈ£¸¦ ¿Ã¹Ù¸£°Ô ÀÔ·ÂÇØÁÖ¼¼¿ä.");
+                alert("ì‚¬ì—…ìë²ˆí˜¸ë¥¼ ì˜¬ë°”ë¥´ê²Œ ì…ë ¥í•´ì£¼ì„¸ìš”.");
                 return false;
             }
         }
 
         if (founddateValue != "") {
             if (!IsDateType(founddateValue)) {
-                alert("³¯Â¥ Çü½ÄÀ» ¿Ã¹Ù¸£°Ô ÀÔ·ÂÇØÁÖ¼¼¿ä.");
+                alert("ë‚ ì§œ í˜•ì‹ì„ ì˜¬ë°”ë¥´ê²Œ ì…ë ¥í•´ì£¼ì„¸ìš”.");
                 return false;
             }
         }
@@ -76,58 +76,58 @@
 
 <div class="View">
     <div class="ViewTitle">
-        <span>Create Account</span>
+        <span>ê±°ë˜ì²˜ ìƒì„±</span>
     </div>
     <div class="ViewContent">
-        <span class="ViewSubTitle">> Basic Information</span>
+        <span class="ViewSubTitle">> ê¸°ë³¸ ì •ë³´</span>
         <form id="AccountCreateForm" action="/Accounts/Create" method="post">
             @*asp-action="Create"*@
             <table>
                 <tr>
                     <td class="tableLabelTD">
-                        <span>CompanyName</span>
+                        <span class="requireField">íšŒì‚¬ëª…</span>
                     </td>
                     <td class="tableInputTD">
-                        <input type="text" id="Name" name="Name" class="inputType" placeholder="°Å·¡Ã³ ÀÌ¸§" />
+                        <input type="text" id="Name" name="Name" class="inputType" placeholder="ê±°ë˜ì²˜ ì´ë¦„" />
                         @*<input asp-for="Name" class="form-control" />
                             <span asp-validation-for="Name" class="text-danger"></span>*@
                     </td>
                     <td class="tableLabelTD">
-                        <span>Tel</span>
+                        <span>ì „í™”ë²ˆí˜¸</span>
                     </td>
                     <td class="tableInputTD">
-                        <input type="tel" id="Phone" name="Phone" class="inputType" />
+                        <input type="tel" id="Phone" name="Phone" class="inputType" placeholder="ì „í™”ë²ˆí˜¸[00-000-0000]" />
                     </td>
                     <td class="tableLabelTD">
-                        <span>Fax</span>
+                        <span>íŒ©ìŠ¤</span>
                     </td>
                     <td class="tableInputTD">
-                        <input type="tel" id="Fax" name="Fax" class="inputType" />
+                        <input type="tel" id="Fax" name="Fax" class="inputType" placeholder="íŒ©ìŠ¤[00-000-0000]" />
                     </td>
                 </tr>
                 <tr>
                     <td class="tableLabelTD">
-                        <span>HomePage</span>
+                        <span>í™ˆí˜ì´ì§€</span>
                     </td>
                     <td class="tableInputTD">
-                        <input type="text" id="Homepage" name="Homepage" class="inputType" />
+                        <input type="text" id="Homepage" name="Homepage" class="inputType" placeholder="í™ˆí˜ì´ì§€ ì£¼ì†Œ" />
                     </td>
                     <td class="tableLabelTD">
                         <span>CEO</span>
                     </td>
                     <td class="tableInputTD">
-                        <input type="text" id="Ceo" name="Ceo" class="inputType" />
+                        <input type="text" id="Ceo" name="Ceo" class="inputType" placeholder="ëŒ€í‘œ/ì‚¬ì¥ ì„±í•¨" />
                     </td>
                     <td class="tableLabelTD">
-                        <span>Biz No.</span>
+                        <span>ì‚¬ì—…ìë²ˆí˜¸</span>
                     </td>
                     <td class="tableInputTD">
-                        <input type="text" id="Biznum" name="Biznum" class="inputType" />
+                        <input type="text" id="Biznum" name="Biznum" class="inputType" placeholder="ì‚¬ì—…ìë²ˆí˜¸" />
                     </td>
                 </tr>
                 <tr>
                     <td class="tableLabelTD">
-                        <span>Founded Date</span>
+                        <span>ì„¤ë¦½ì¼</span>
                     </td>
                     <td class="tableInputTD">
                         @*<input type="date" id="Founddate" name="Founddate" class="inputType" />*@
@@ -135,15 +135,15 @@
                         <input type="hidden" id="Founddate" name="Founddate" />
                     </td>
                     <td class="tableLabelTD">
-                        <span> Detail</span>
+                        <span>ë¹„ê³ </span>
                     </td>
                     <td class="tableInputTD" colspan="3">
-                        <div class="inputDiv" id="Detail" name="Detail" contenteditable="true"></div>
+                        <div class="inputDiv" id="Detail" name="Detail" contenteditable="true">ìƒì„¸ ì„¤ëª…ì„ ì…ë ¥í•˜ì„¸ìš”.</div>
                     </td>
                 </tr>
                 <tr>
                     <td class="tableLabelTD">
-                        <span>Owner</span>
+                        <span>ë‹´ë‹¹ì</span>
                     </td>
                     <td class="tableInputTD">
                         <input type="text" class="inputType" />
@@ -155,8 +155,8 @@
                 </tr>
             </table>
             <div class="ControlButtonArea">
-                <button type="button" id="CreateAccountButton" onclick="SubmitForm();">Create an Account</button>
-                <a href="/Accounts/Index">Back to List</a>
+                <button type="button" id="CreateAccountButton" onclick="SubmitForm();">ì €ì¥</button>
+                <a href="/Accounts/Index">ëª©ë¡</a>                
             </div>
         </form>
     </div>
