--- a/PodoDemo/wwwroot/css/Layout.css
+++ b/PodoDemo/wwwroot/css/Layout.css
@@ -49,11 +49,11 @@ html, body {
         margin: 15px;
     }
 
-    .View .ViewContent .ViewSubTitle{
-        float:left;
-        font-weight:bold;
-        margin-bottom:5px;
-    }
+        .View .ViewContent .ViewSubTitle {
+            float: left;
+            font-weight: bold;
+            margin-bottom: 5px;
+        }
 
 .LabelTD {
     width: 12.5%;
@@ -98,19 +98,24 @@ html, body {
 }
 
     .ViewContent form table {
-        border: 1px solid #494949;
+        border: 1px solid #d1d1d1;
         width: 100%;
         border-collapse: collapse;
     }
 
 .ViewContent .tableLabelTD {
     background-color: #EEF7FF;
-    border: 1px solid #494949;
+    border: 1px solid #d1d1d1;
     width: 150px;
 }
 
+    .ViewContent .tableLabelTD .requireField {
+        color: red;
+        font-weight: bold;
+    }
+
 .ViewContent .tableInputTD {
-    border: 1px solid #494949;
+    border: 1px solid #d1d1d1;
 }
 
 .tableInputTD .inputType {
@@ -119,34 +124,44 @@ html, body {
     float: left;
 }
 
+.tableInputTD label {
+    width: 80%;
+    text-align: center;
+    float: left;
+}
+
 .tableInputTD .inputDiv {
     width: 80%;
     text-align: left;
     float: left;
-    border: 1px solid black;
+    border: 1px solid #d1d1d1;
 }
 
 .ControlButtonArea {
     float: right;
     text-align: center;
-    
+    /*width:100%;*/
 }
 
     .ControlButtonArea a {
+        border: none;
         text-decoration: none;
+        background-color: #2588EA;
+        color: white;
+        display: block;
+        width: 150px;
+        padding: 0px;
+        margin: 0px;
+    }
+
+    .ControlButtonArea button {
         border: none;
         background-color: #2588EA;
         font-size: 15px;
         color: white;
-        width:200px;
-    }
-
-    .ControlButtonArea button {
-        border: 1px solid black;
-        background-color: #2588EA;
-        font-size: 15px;
-        color: white;
-        width: 200px;
+        width: 150px;
+        padding: 0px;
+        margin: 0px;
     }
 
         .ControlButtonArea button:hover {
