--- a/PodoDemo/Views/Shared/Components/MenuList/Default.cshtml
+++ b/PodoDemo/Views/Shared/Components/MenuList/Default.cshtml
@@ -4,8 +4,8 @@
 
 <link href="~/css/Menu.css" rel="stylesheet" />
 <div class="menuList">
-    @*<img src="~/images/Menu/logo.png" class="menuLogo" />*@
-    <div class="menuLogo">로고 150 * 60 px</div>
+    <img src="~/images/Menu/logo.png" class="menuLogo" width="150"/>
+    @*<div class="menuLogo">로고 150 * 60 px</div>*@
     <div class="menuBlock">
         @{
             List<MenuDisplay> MenuList = Model.ToList<MenuDisplay>();
