--- a/PodoDemo/wwwroot/css/Layout.css
+++ b/PodoDemo/wwwroot/css/Layout.css
@@ -10,20 +10,7 @@ html, body {
     background-color: #f9f9f9;
 }
 
-.ViewTitle {
-    background-color: #474747;
-    height: 45px;
-    text-align: left;
-    /*border-radius: 5px 5px 0px 0px;*/
-    color: white;
-    vertical-align: middle;
-    line-height: 45px;
-}
 
-    .ViewTitle span {
-        margin-left: 20px;
-        font-weight: bold;
-    }
 
 .View {
     width: 1330px;
@@ -61,6 +48,8 @@ html, body {
     color: white;
 }
 
+
+/* 검색 조건 테이블 */
 .SearchLabel {
     text-align: center;
 }
@@ -73,7 +62,6 @@ html, body {
     width: 100%;
     box-sizing: border-box;
 }
-
 
 .SearchButton {
     float: right;
@@ -92,28 +80,46 @@ html, body {
         color: #796d6d;
     }
 
+/* 각 페이지 별 제목 */
+.ViewTitle {
+    background-color: #474747;
+    height: 45px;
+    text-align: left;
+    /*border-radius: 5px 5px 0px 0px;*/
+    color: white;
+    vertical-align: middle;
+    line-height: 45px;
+}
+
+    .ViewTitle span {
+        font-weight: bold;
+    }
+
+/* 메인 폼, 테이블 */
 .ViewContent form {
     margin-left: auto;
     margin-right: auto;
 }
 
-    .ViewContent form table {
+    .ViewContent form .ContentTable {
         border: 1px solid #d1d1d1;
         width: 100%;
         border-collapse: collapse;
     }
 
+/* 테이블 내부 제목 부분 */
 .ViewContent .tableLabelTD {
     background-color: #EEF7FF;
     border: 1px solid #d1d1d1;
     width: 150px;
 }
 
-    .ViewContent .tableLabelTD .requireField {
-        color: red;
-        font-weight: bold;
-    }
+.tableLabelTD .requireField {
+    color: red;
+    font-weight: bold;
+}
 
+/* 테이블 내부 사용자 입력 부분 */
 .ViewContent .tableInputTD {
     border: 1px solid #d1d1d1;
 }
@@ -124,7 +130,7 @@ html, body {
     float: left;
 }
 
-.tableInputTD label {
+.tableInputTD .inputLabel {
     width: 80%;
     text-align: center;
     float: left;
@@ -137,6 +143,7 @@ html, body {
     border: 1px solid #d1d1d1;
 }
 
+/* 각 페이지 별 저장/목록 등 버튼 영역 */
 .ControlButtonArea {
     float: right;
     text-align: center;
