--- a/PodoDemo/wwwroot/css/Menu.css
+++ b/PodoDemo/wwwroot/css/Menu.css
@@ -22,8 +22,8 @@
         float: right;
         width: 300px;
         color: white;
-        line-height:60px;
-        text-align:center;
+        line-height: 60px;
+        text-align: center;
     }
 
 
@@ -31,6 +31,7 @@
     list-style-type: none;
     margin: 0px;
     padding: 0px;
+    display: block;
 }
 
     .menuBlock nav ul li {
@@ -67,11 +68,18 @@
             margin-right: -1px;
         }
 
+            .menuBlock nav ul li ul a {
+            }
+
+                .menuBlock nav ul li ul a:hover {
+                    color: orange;
+                }
+
 
 .userInfo .userName {
     font-weight: bold;
-    line-height:60px;
-    font-size:30px;
+    line-height: 60px;
+    font-size: 30px;
     /*vertical-align:middle;*/
 }
 
