--- a/PodoDemo/Views/Shared/Components/MenuList/Default.cshtml
+++ b/PodoDemo/Views/Shared/Components/MenuList/Default.cshtml
@@ -2,6 +2,10 @@
 @using Microsoft.AspNetCore.Http;
 @model IEnumerable<MenuDisplay>
 
+@{
+    List<MenuDisplay> SubMenuDisplay = ViewBag.SubMenuList;
+}
+
 <link href="~/css/Menu.css" rel="stylesheet" />
 <div class="menuList">
     <img src="~/images/Menu/logo.png" class="menuLogo" width="150" />
@@ -11,24 +15,18 @@
             List<MenuDisplay> MenuList = Model.ToList<MenuDisplay>();
             <nav>
                 <ul>
-                    @*오름차순으로 정렬하므로 맨 끝에 있는 대메뉴 번호(=메뉴개수) 만큼 출력한다.*@
-                    @for (int parentIndex = 1; parentIndex < MenuList[MenuList.Count - 1].ParentMenuId + 1; parentIndex++)
+                    @for (int parentIndex = 0; parentIndex < MenuList.Count; parentIndex++)
                     {
-                        int index = MenuList.FindIndex(m => m.ParentMenuId.Equals(MenuList[parentIndex - 1].ParentMenuId));
                         <li>
-                            <span>
-                                @MenuList[index].ParentMenuName
-                                @*@MenuList[parentIndex].ParentMenuName*@
-                            </span>
+                            <span>@MenuList[parentIndex].ParentMenuName</span>
                             <ul>
-                                @for (int i = 0; i < MenuList.Count; i++)
+                                @for (int subIndex = 0; subIndex < SubMenuDisplay.Count; subIndex++)
                                 {
-                                    @*@if (MenuList[parentIndex].ParentMenuId == MenuList[i].ParentMenuId)*@
-                                    @if (MenuList[parentIndex].ParentMenuId == MenuList[i].ParentMenuId)
+                                    @if (MenuList[parentIndex].ParentMenuId.Equals(SubMenuDisplay[subIndex].ParentMenuId))
                                     {
                                         <li>
-                                            <a href="@MenuList[i].MenuUrl" style="text-decoration:none;">
-                                                @MenuList[i].SubMenuName
+                                            <a href="@SubMenuDisplay[subIndex].MenuUrl">
+                                                @SubMenuDisplay[subIndex].SubMenuName
                                             </a>
                                         </li>
                                     }
