--- a/PodoDemo/wwwroot/css/Menu.css
+++ b/PodoDemo/wwwroot/css/Menu.css
@@ -44,11 +44,11 @@
         position: relative;
         line-height: 60px;
         width: 100px;
+        float:left;
     }
 
         .menuBlock nav ul li:hover {
             cursor: pointer;
-            /*color: red;*/
             color: orangered;
         }
 
@@ -69,6 +69,8 @@
         }
 
             .menuBlock nav ul li ul a {
+                text-decoration:none;
+                color:white;
             }
 
                 .menuBlock nav ul li ul a:hover {
