메뉴 수정 부분 부트 스트랩 적용

--- a/PodoDemo/Views/Manage/MenuEdit.cshtml
+++ b/PodoDemo/Views/Manage/MenuEdit.cshtml
@@ -7,56 +7,131 @@
         Layout = "~/Views/Shared/Popup_Layout.cshtml";
     }
 
-    string isChecked = Model.Isused ? "Checked" : "";
+    string isUsedChecked_T = Model.Isused ? "checked" : "";
+    string isUsedChecked_F = Model.Isused ? "" : "checked";
+
+    string isDeletedChecked_T = Model.Isdeleted ? "checked" : "";
+    string isDeletedChecked_F = Model.Isdeleted ? "" : "checked";
+
+    bool isPop = ViewBag.isPop;
 }
+
+<link href="~/css/Layout_Pop.css" rel="stylesheet" />
 
 <script type="text/javascript">
     $(document).ready(function () {
+        $("#Isused_T").prop("checked", "@isUsedChecked_T");
+        $("#Isused_F").prop("checked", "@isUsedChecked_F");
 
+        $("#Isdeleted_T").prop("checked", "@isDeletedChecked_T");
+        $("#Isdeleted_F").prop("checked", "@isDeletedChecked_F");
+        //
     });
 
-    // 폼이 입력될 때
+    // 메뉴 수정 내용 저장
     function SubmitForm() {
         // 유효성 검사 후 진행
         //if (ValidateForm()) {
         //    $("#Founddate").val($('#jqdatetimeinput_founddate').jqxDateTimeInput('getText'));
         //    $("#Detail").val($("#tempDetail").html());
-
         //}
 
+        $("#MenuEditForm").prop("action", "/Manage/MenuEdit");
+        $("#MenuEditForm").prop("method", "post");
+        $("#MenuEditForm").submit();
+    }
+
+    // 메뉴 삭제
+    function DeleteMenu() {
+        $("#MenuEditForm").prop("action", "/Manage/DeleteMenu");
+        $("#MenuEditForm").prop("method", "post");
         $("#MenuEditForm").submit();
     }
 </script>
 
-<h2>메뉴 수정 창</h2>
-<span>팝업여부 : @ViewBag.isPop</span>
-<span>사용여부 : @isChecked</span>
-<h4>@Model.Name</h4>
+<div class="container custom-container">
+    <div class="custom-header">
+        <span>메뉴 수정</span>
+    </div>
 
-<form id="MenuEditForm" action="/Manage/MenuEdit" method="post">
-    <input type="hidden" id="Id" name="Id" value="@Model.Id" />
-    <input type="hidden" id="IsPop" name="IsPop" value="@ViewBag.isPop" />
+    <form id="MenuEditForm">
+        <input type="hidden" id="Id" name="Id" value="@Model.Id" />
+        <input type="hidden" id="IsPop" name="IsPop" value="@Html.Raw(isPop)" />
+        <input type="hidden" id="Createdate" name="Createdate" value="@Model.Createdate" />
+        <input type="hidden" id="Createuser" name="Createuser" value="@Model.Createuser" />
+        <input type="hidden" id="Modifydate" name="Modifydate" value="@Model.Modifydate" />
+        <input type="hidden" id="Modifyuser" name="Modifyuser" value="@Model.Modifyuser" />
 
-    <span>이름</span>
-    <input type="text" id="Name" name="Name" value="@Model.Name" placeholder="대메뉴 이름" />
+        <div class="row">
+            <div class="col-sm-4 custom-title">
+                <span>이름</span>
+            </div>
+            <div class="col-sm-8 custom-input">
+                <input type="text" id="Name" name="Name"
+                       class="form-control"
+                       value="@Model.Name" placeholder="대메뉴 이름" />
+            </div>
+        </div>
 
-    <span>순서</span>
-    <input type="number" id="Order" name="Order" value="@Model.Order" placeholder="대메뉴 순서" />
+        <div class="row">
+            <div class="col-sm-4 custom-title">
+                <span>순서</span>
+            </div>
+            <div class="col-sm-8 custom-input">
+                <input type="number" id="Order" name="Order"
+                       class="form-control"
+                       value="@Model.Order" placeholder="대메뉴 순서" />
+            </div>
+        </div>
 
-    <span>사용여부</span>
-    <span>@Model.Isused</span>
-    <input type="radio" id="Isused_T" name="Isused" />
-    <input type="radio" id="Isused_F" name="Isused" />
+        <div class="row">
+            <div class="col-sm-4 custom-title">
+                <span>사용여부</span>
+            </div>
+            <div class="col-sm-8 custom-input">
+                <label class="radio-inline">
+                    <input type="radio" id="Isused_T" name="Isused" value="true" />예
+                </label>
 
-    <span>삭제여부</span>
-    <span>@Model.Isdeleted</span>
-    <input type="radio" id="Isdeleted_T" name="Isdeleted" />
-    <input type="radio" id="Isdeleted_F" name="Isdeleted" />
+                <label class="radio-inline">
+                    <input type="radio" id="Isused_F" name="Isused" value="false" />아니오
+                </label>
 
-    <button type="button" onclick="SubmitForm();">수정</button>
+            </div>
+        </div>
 
-    <input type="hidden" id="Createdate" name="Createdate" value="@Model.Createdate" />
-    <input type="hidden" id="Createuser" name="Createuser" value="@Model.Createuser" />
-    <input type="hidden" id="Modifydate" name="Modifydate" value="@Model.Modifydate" />
-    <input type="hidden" id="Modifyuser" name="Modifyuser" value="@Model.Modifyuser" />
-</form>
+        <div class="row">
+            <div class="col-sm-4 custom-title">
+                <span>삭제여부</span>
+            </div>
+            <div class="col-sm-8 custom-input">
+                <label class="radio-inline">
+                    <input type="radio" id="Isdeleted_T" name="Isdeleted" value="true" />예
+                </label>
+                <label class="radio-inline">
+                    <input type="radio" id="Isdeleted_F" name="Isdeleted" value="false" />아니오
+                </label>
+            </div>
+        </div>
+
+        <hr />
+
+        <div class="row">
+            <div class="col-sm-12">
+                <button type="button" class="btn custom-btn custom-btn-save" onclick="SubmitForm();">저장</button>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-12">
+                <button type="button" id="MenuDeleteButton" class="btn custom-btn custom-btn-delete" onclick="DeleteMenu();">삭제</button>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-12">
+                <button type="button" class="btn custom-btn custom-btn-close" onclick="window.close();">닫기</button>
+            </div>
+        </div>
+    </form>
+</div>
