--- a/PodoDemo/Views/Home/Close.cshtml
+++ b/PodoDemo/Views/Home/Close.cshtml
@@ -1,12 +1,10 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
-
-
-<script type="text/javascript">
+﻿<script type="text/javascript">
     $(document).ready(function () {
+
+        if (window.parent != null) {
+            window.parent.location.reload();
+        }
+
         window.close();
     });
 </script>
