일반 메뉴에도 부트스트랩 적용 시작

--- a/PodoDemo/Views/Manage/Menu.cshtml
+++ b/PodoDemo/Views/Manage/Menu.cshtml
@@ -99,44 +99,16 @@
 </script>
 
 <div class="View">
+    <div class="container custom-container">
+        <div class="col-md-12 custom-header">
+            <p class="text-left">메뉴 관리</p>
+        </div>
+        
+    </div>
     <div class="ViewTitle">
-        <span>거래처 목록</span>
+        <span>메뉴 관리</span>
     </div>
-    <div class="SearchCondition">
-        <table>
-            <tr>
-                <td class="LabelTD">
-                    <span class="SearchLabel">회사명</span>
-                </td>
-                <td class="InputTD">
-                    <input type="text" class="SearchInput" placeholder="Account Name" />
-                </td>
-                <td class="LabelTD">
-                    <span class="SearchLabel">전화번호</span>
-                </td>
-                <td class="InputTD">
-                    <input type="text" class="SearchInput" placeholder="Account Phone" />
-                </td>
-                <td class="LabelTD">
-                    <span class="SearchLabel">고객타입</span>
-                </td>
-                <td class="InputTD">
-                    <select id="accountCustomerType" class="SearchInput"></select>
-                </td>
-                <td class="LabelTD">
-                    <span class="SearchLabel">업종</span>
-                </td>
-                <td class="InputTD">
-                    <input type="text" class="SearchInput" />
-                </td>
-            </tr>
-            <tr>
-                <td colspan="8">
-                    <button type="button" class="SearchButton">검색</button>
-                </td>
-            </tr>
-        </table>
-    </div>
+
     <div class="ViewContent">
         <div id="mainMenuList"></div>
     </div>
