--- a/PodoDemo/Views/Manage/MenuEdit.cshtml
+++ b/PodoDemo/Views/Manage/MenuEdit.cshtml
@@ -16,8 +16,7 @@
     bool isPop = ViewBag.isPop;
 }
 
-<link href="~/css/Layout_Pop.css" rel="stylesheet" />
-
+<link href="~/css/Layout_BootstrapCustom.css" rel="stylesheet" />
 <script type="text/javascript">
     $(document).ready(function () {
         $("#Isused_T").prop("checked", "@isUsedChecked_T");
@@ -51,7 +50,7 @@
 
 <div class="container custom-container">
     <div class="custom-header">
-        <span>메뉴 수정</span>
+        <span>대메뉴 수정</span>
     </div>
 
     <form id="MenuEditForm">
