--- a/PodoDemo/Views/Shared/Layout.cshtml
+++ b/PodoDemo/Views/Shared/Layout.cshtml
@@ -18,6 +18,7 @@
     @*부트 스트랩*@
     <script src="~/js/bootstrap332/js/bootstrap.js"></script>
     <link href="~/js/bootstrap332/css/bootstrap.css" rel="stylesheet" />
+    <link href="~/css/Layout_BootstrapCustom.css" rel="stylesheet" />
 
     @*커스텀 파일*@
     <link href="~/css/Layout.css" rel="stylesheet" />
